--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>Principiante xd</p>
     <h1>Principiante</h1>
-    <label for="name">nombre</label>
-    mundo
+
+    mundo jsjsjsj
   </body>
 </html>
