--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>RitiFederico</title>
   </head>
   <body>
-    <p>Principiante xd</p>
+    <p>Principiante xdg</p>
     <h1>Principiante</h1>
 
     mundo jsjsjsj
