--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <p>Principiante xdg</p>
     <h1>Principiante</h1>
-
-    mundo jsjsjsj
+    lucas burro mundo jsjsjsj
   </body>
 </html>
